@@ -3,6 +3,7 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  FIX: GstEngine skipping tracks directly after starting, when crossfading enabled.
   CHG: Database system now works with linked tables. Saves hdd-space and cpu-time.
   CHG: If you remove the current song from the playlist, we don't define the next 
        song anymore, but let it be randomly selected (only when random mode is on!)
